kubernetes/frontend/endpoints.yaml
apiVersion: v1
kind: Endpoints
metadata:
  name: nextstep-frontend-external-app
subsets:
- addresses:
  - ip: 10.0.0.98
  ports:
  - name: nextstep-frontend-port
    port: 5000
    protocol: TCP
