kubernetes/frontend/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: nextstep-frontend
spec:
  parentRefs:
  - name: gateway
    namespace: gateway
    sectionName: http-1
  hostnames:
  - "nextstep.theworkpc.com"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
      - name: nextstep-frontend-external-app
        kind: Service
        port: 5000
